--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,3 @@
-site_name: The Midnight Wiki
-site_dir: '/home/docs/checkouts/readthedocs.org/user_builds/the-midnight/builds/latest/'
-docs_dir: '/home/docs/checkouts/readthedocs.org/user_builds/the-midnight/checkouts/latest/'
+site_name: My Docs
+docs_dir: 'docs'
+side_dir: 'site'
