--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,8 @@
 site_name: The Midnight Wiki
 docs_dir: 'docs'
-side_dir: 'site'
+site_dir: 'site'
 
-theme:
-    name: null
-    custom_dir: 'cinder'
+theme: readthedocs
 
 markdown_extensions:
     - admonition
