Add about section

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,4 +9,7 @@ markdown_extensions:
 
 nav:
     - Home: index.md
-    - Credits: credits.md
+    - About:
+        - What is The Midnight?: about/about.md
+        - Contributing to the Wiki: about/contribution.md
+        - Credits: about/credits.md
