--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,54 +1,51 @@
-# This is an example mods.toml file. It contains the data relating to the loading mods.
-# There are several mandatory fields (#mandatory), and many more that are optional (#optional).
-# The overall format is standard TOML format, v0.5.0.
-# Note that there are a couple of TOML lists in this file.
-# Find more information on toml format here:  https://github.com/toml-lang/toml
-# The name of the mod loader type to load - for regular FML @Mod mods it should be javafml
+
 modLoader="javafml" #mandatory
-# A version range to match for said mod loader - for regular FML @Mod it will be the forge version
-loaderVersion="[32,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
-# A URL to refer people to when problems occur with this mod
+loaderVersion="[32,)" #mandatory
 issueTrackerURL="https://github.com/Cryptic-Mushroom/The-Midnight/issues" #optional
-# A list of mods - how many allowed here is determined by the individual mod loader
+
 [[mods]] #mandatory
-# The modid of the mod
 modId="midnight" #mandatory
-# The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 version="${file.jarVersion}" #mandatory
- # A display name for the mod
 displayName="The Midnight" #mandatory
-# A URL to query for updates for this mod. See the JSON update specification <here>
-#updateJSONURL="http://myurl.me/" #optional
-# A URL for the "homepage" for this mod, displayed in the mod UI
+updateJSONURL="https://raw.githubusercontent.com/Cryptic-Mushroom/The-Midnight/1.15.2/changelog.json" #optional
 displayURL="https://www.curseforge.com/minecraft/mc-mods/the-midnight" #optional
-# A file name (in the root of the mod JAR) containing a logo for display
-#logoFile="examplemod.png" #optional
-# A text field displayed in the mod UI
+logoFile="logo.png" #optional
 #credits="Thanks for this example mod goes to Java" #optional
-# A text field displayed in the mod UI
-#authors="Love, Cheese and small house plants" #optional
-# The description text for the mod (multi line!) (#mandatory)
+authors="Cryptic Mushroom's The Midnight Development Team" #optional
 description='''
-This is a long form description of the mod. You can write whatever you want here
+The Midnight has been rewritten from the ground up for Minecraft 1.16.1 and is currently in an unstable alpha. Expect more content soon!
 
-Have some lorem ipsum.
+This mod is a huge collaborative effort with tons of different ideas, coding, and textures pitched in by varying individuals who came together to build something great. We wouldn't be where we are today without the help of those here today and those who worked on this mod in the past.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis lacinia magna. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed sagittis luctus odio eu tempus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque volutpat ligula eget lacus auctor sagittis. In hac habitasse platea dictumst. Nunc gravida elit vitae sem vehicula efficitur. Donec mattis ipsum et arcu lobortis, eleifend sagittis sem rutrum. Cras pharetra quam eget posuere fermentum. Sed id tincidunt justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+The Midnight Development Team Active Developers
+Cipher Zero X - Project Lead, Mastermind, Modeler
+RedGalaxySW - Lead Programmer
+Jonathing - Lead QA, Community Manager, Programmer
+
+Active Collaborators
+Lachney - Lead Sound Designer, Lead Musician
+
+Former and Inactive Developers
+bagu_chan - Programmer
+gegy1000 - Programmer
+Martacus - Programmer
+arthurbambous - Programmer
+Corail31 - Programmer
+Endergized - Texturer
+Five (Paradiscal) - Texturer
+MCVinnyq - Texturer, Modeler
+
+The Midnight is still in active development and we'd love to hear your feedback! Click the link near the top of this page to view information on our Discord server, active developers, and plans for the future of this mod.
 '''
-# A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
-[[dependencies.examplemod]] #optional
-    # the modid of the dependency
-    modId="forge" #mandatory
-    # Does this dependency have to exist - if not, ordering below must be specified
-    mandatory=true #mandatory
-    # The version range of the dependency
-    versionRange="[32,)" #mandatory
-    # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
+
+[[dependencies.midnight]]
+    modId="forge"
+    mandatory=true
+    versionRange="[32.0.1,)"
     ordering="NONE"
-    # Side this dependency is applied on - BOTH, CLIENT or SERVER
     side="BOTH"
-# Here's another dependency
-[[dependencies.examplemod]]
+
+[[dependencies.midnight]]
     modId="minecraft"
     mandatory=true
     versionRange="[1.16.1]"
