Gradle setup There are now 3 subprojects: MidnightAPI, MidnightCore and MidnightMod

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,9 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+midnight.version=0.6.0
+midnight.version.name=The Midnight Rewrite
+midnight.group=com.crypticmushroom
+midnight.modname=midnight
+midnight.apiname=midnight-api
+midnight.corename=midnight-core
