Stuff with dynamic constants - Gradle now injects constant values using ASM instead of direct source modification. This allows us to use general java semantics like annotations, instead of a stupid DynamicConstants inner class which already breaks when you change formatting - The Midnight now logs a message on startup showing version and build information - The run configurations now include a property that indicates that the Midnight is running from the IDE, and they now include test sources. Make sure you run 'gen...Runs' again in order for this to work

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ eclipse
 run
 # Exclude the root sources directory as we don't use this...
 # IntelliJ may automatically generate them though...
-src
+/src
 
 # Files from Forge MDK
 forge*changelog.txt
