--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ buildscript {
     }
 }
 
+ext {
+    timeOfExecution = new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+}
 
 // ==================
 // ALL PROJECTS SETUP
@@ -39,6 +42,16 @@ allprojects {
 
     midnight {
         shade('net.rgsw.ptg', 'midnight.internal.net.rgsw.ptg')
+
+        constant('version', project.version)
+        constant('version_name', project.ext.versionName)
+        constant('implementation_name', project.ext.implName)
+        constant('modid', project.ext.modid)
+        constant('group', project.group)
+        constant('build_time', project.ext.timeOfExecution)
+        constant('sha1') {
+            project.isIDE && project.canJarBeSigned() ? "NO:FI:NG:ER:PR:IN:TA:VA:IL:AB:LE" : project.getProjectFingerprint()
+        }
     }
 
     repositories {
@@ -142,10 +155,11 @@ minecraft {
 
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
             property 'forge.logging.console.level', 'info'
+            property 'midnight.iside', 'true'
 
             mods {
                 midnight {
-                    source sourceSets.main
+                    sources sourceSets.main, sourceSets.test
                 }
             }
         }
@@ -155,12 +169,13 @@ minecraft {
 
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
             property 'forge.logging.console.level', 'info'
+            property 'midnight.iside', 'true'
 
             args 'nogui'
 
             mods {
                 midnight {
-                    source sourceSets.main
+                    sources sourceSets.main, sourceSets.test
                 }
             }
         }
@@ -170,12 +185,13 @@ minecraft {
 
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
             property 'forge.logging.console.level', 'info'
+            property 'midnight.iside', 'true'
 
             args '--mod', 'midnight', '--all', '--output', file('src/generated/resources/')
 
             mods {
                 midnight {
-                    source sourceSets.main
+                    sources sourceSets.main, sourceSets.test
                 }
             }
         }
@@ -255,8 +271,11 @@ processResources {
 }
 
 
-if (project.ext.isIDE) {
-    println "Building for IDE"
-} else {
-    println "Building for production"
+// These tasks are unnecessary for the root project...
+jar {
+    enabled false
+}
+
+injectConstants {
+    enabled false
 }
