--- a/gensources.gradle
+++ b/gensources.gradle
@@ -1,31 +1,24 @@
-/*
- * Copyright (c) 2020 RedGalaxy & contributors
- * All rights reserved. Do not distribute.
- *
- * For a full license, see LICENSE.txt
- */
-
-task generateSources( type: Copy ) {
-    doFirst {
-        delete "$buildDir/generatedSrc"
-    }
-    outputs.upToDateWhen { false }
-
-    from( 'src/main/java' ) {
-        exclude 'runs/**'
-    }
-    into "$buildDir/generatedSrc"
-    filter { line ->
-        line.replaceAll( 'DynamicConstants\\.IDE', "$project.isIDE" )
-                .replaceAll( 'DynamicConstants\\.SIGNED', "${ project.canJarBeSigned() && !project.isIDE }" )
-                .replaceAll( 'DynamicConstants\\.VERSION_NAME', "\"${ project.version }\"" )
-                .replaceAll( 'DynamicConstants\\.VERSION', "\"${ project.version }\"" )
-                .replaceAll( 'DynamicConstants\\.SHA1', "\"${ project.isIDE ? "NO:FI:NG:ER:PR:IN:TA:VA:IL:AB:LE" : project.getProjectFingerprint() }\"" )
-    }
-    doLast {
-        println "Generated sources, IDE: $project.isIDE"
-    }
-}
+//task generateSources( type: Copy ) {
+//    doFirst {
+//        delete "$buildDir/generatedSrc"
+//    }
+//    outputs.upToDateWhen { false }
+//
+//    from( 'src/main/java' ) {
+//        exclude 'runs/**'
+//    }
+//    into "$buildDir/generatedSrc"
+//    filter { line ->
+//        line.replaceAll( 'DynamicConstants\\.ide()', "$project.isIDE" )
+//                .replaceAll( 'DynamicConstants\\.SIGNED', "${ project.canJarBeSigned() && !project.isIDE }" )
+//                .replaceAll( 'DynamicConstants\\.VERSION_NAME', "\"${ project.version }\"" )
+//                .replaceAll( 'DynamicConstants\\.VERSION', "\"${ project.version }\"" )
+//                .replaceAll( 'DynamicConstants\\.SHA1', "\"${ project.isIDE ? "NO:FI:NG:ER:PR:IN:TA:VA:IL:AB:LE" : project.getProjectFingerprint() }\"" )
+//    }
+//    doLast {
+//        println "Generated sources, IDE: $project.isIDE"
+//    }
+//}
 
 processResources {
     doFirst {
@@ -51,6 +44,6 @@ processResources {
 }
 
 compileJava {
-    setSource( "$buildDir/generatedSrc" )
-    dependsOn generateSources
+//    setSource( "$buildDir/generatedSrc" )
+//    dependsOn generateSources
 }
