--- a/.github/workflows/1.16.1-build.yml
+++ b/.github/workflows/1.16.1-build.yml
@@ -1,7 +1,7 @@
 # This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java#publishing-using-gradle
 
-name: The Midnight for Minecraft 1.16.1
+name: The Midnight (1.16.1)
 
 on:
   push:
@@ -26,7 +26,7 @@ jobs:
     steps:
     - name: Update CI Workspace
       uses: actions/checkout@v1
-    
+
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
@@ -34,7 +34,7 @@ jobs:
         java-package: jdk
         architecture: x64
 
-    - name: Build The Midnight for Minecraft 1.16.1
+    - name: Build The Midnight
       uses: eskatos/gradle-command-action@v1
       with:
         gradle-version: 4.10.3
@@ -63,3 +63,47 @@ jobs:
         name: midnight-mod-${{ github.sha }}
         # A file, directory or wildcard pattern that describes what to upload
         path: MidnightMod/build/libs/*.jar
+
+  test:
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Update CI workspace
+        uses: actions/checkout@v1
+
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+          java-package: jdk
+          architecture: x64
+
+      - name: Set up test server
+        run: mkdir run; mkdir run/server; echo "eula=true" >> run/server/eula.txt; echo "Set eula to true."; echo "TEST FAILED" >> run/server/TESTSERVER.txt; echo "Generated TESTSERVER.txt file."
+
+      - name: Run test server
+        uses: eskatos/gradle-command-action@v1
+        continue-on-error: true
+        with:
+          gradle-version: 4.10.3
+          arguments: runServer
+
+#      - name: Wait for 10 seconds
+#        uses: jakejarvis/wait-action@master
+#        with:
+#          time: '10s'
+
+      - name: Read log file
+        id: log
+        uses: andstor/file-reader-action@v1
+        with:
+          path: run/server/TESTSERVER.txt
+
+      - name: Check if server test was unsuccessful
+        if: contains(steps.log.outputs.contents, 'TEST FAILED')
+        run: echo "GitHub Actions was unable to successfully load the test server into a temporary world. Check the log in the \"Run test server\" step to see what went wrong."; exit 1
+
+      - name: Check if server test was successful
+        if: contains(steps.log.outputs.contents, 'TEST SUCCESS')
+        run: echo "TEST SUCCESS"
