--- a/.github/workflows/1.16.1-build.yml
+++ b/.github/workflows/1.16.1-build.yml
@@ -94,16 +94,16 @@ jobs:
 #        with:
 #          time: '10s'
 
-      - name: Read log file
+      - name: Read server test result
         id: log
         uses: andstor/file-reader-action@v1
         with:
           path: run/server/TESTSERVER.txt
 
-      - name: Check if server test was unsuccessful
+      - name: Determine if server test was unsuccessful
         if: contains(steps.log.outputs.contents, 'TEST FAILED')
         run: echo "GitHub Actions was unable to successfully load the test server into a temporary world. Check the log in the \"Run test server\" step to see what went wrong."; exit 1
 
-      - name: Check if server test was successful
-        if: contains(steps.log.outputs.contents, 'TEST SUCCESS')
-        run: echo "TEST SUCCESS"
+#      - name: Check if server test was successful
+#        if: contains(steps.log.outputs.contents, 'TEST SUCCESS')
+#        run: echo "TEST SUCCESS"
