--- a/build.gradle
+++ b/build.gradle
@@ -222,8 +222,31 @@ task collectClasses(type: Copy) {
     outputs.upToDateWhen { t -> false }
 
     doFirst {
-        delete "$buildDir/classes/java"
+        delete "$buildDir/classes/java/main"
         file("$buildDir/classes/java/main").mkdirs()
+    }
+
+    configurations.collectMany {
+        it.allDependencies
+    }.findAll {
+        it instanceof ProjectDependency
+    }.each {
+        ProjectDependency dep = (ProjectDependency) it
+        from("$dep.dependencyProject.buildDir/classes/java/main")
+    }
+
+    into("$buildDir/classes/java/main")
+}
+
+task collectTestClasses(type: Copy) {
+    dependsOn ':MidnightAPI:testClasses'
+    dependsOn ':MidnightCore:testClasses'
+    dependsOn ':MidnightMod:testClasses'
+
+    outputs.upToDateWhen { t -> false }
+
+    doFirst {
+        delete "$buildDir/classes/java/test"
         file("$buildDir/classes/java/test").mkdirs()
     }
 
@@ -233,14 +256,18 @@ task collectClasses(type: Copy) {
         it instanceof ProjectDependency
     }.each {
         ProjectDependency dep = (ProjectDependency) it
-        from("$dep.dependencyProject.buildDir/classes/java")
+        from("$dep.dependencyProject.buildDir/classes/java/test")
     }
 
-    into("$buildDir/classes/java")
+    into("$buildDir/classes/java/test")
 }
 
 compileJava {
     dependsOn 'collectClasses'
+}
+
+compileTestJava {
+    dependsOn 'collectTestClasses'
 }
 
 
@@ -250,8 +277,31 @@ task collectResources(type: Copy) {
     dependsOn ':MidnightMod:classes'
 
     doFirst {
-        delete "$buildDir/resources"
+        delete "$buildDir/resources/main"
         file("$buildDir/resources/main").mkdirs()
+    }
+
+    outputs.upToDateWhen { t -> false }
+
+    configurations.collectMany {
+        it.allDependencies
+    }.findAll {
+        it instanceof ProjectDependency
+    }.each {
+        ProjectDependency dep = (ProjectDependency) it
+        from("$dep.dependencyProject.buildDir/resources/main")
+    }
+
+    into("$buildDir/resources/main")
+}
+
+task collectTestResources(type: Copy) {
+    dependsOn ':MidnightAPI:testClasses'
+    dependsOn ':MidnightCore:testClasses'
+    dependsOn ':MidnightMod:testClasses'
+
+    doFirst {
+        delete "$buildDir/resources/test"
         file("$buildDir/resources/test").mkdirs()
     }
 
@@ -263,16 +313,19 @@ task collectResources(type: Copy) {
         it instanceof ProjectDependency
     }.each {
         ProjectDependency dep = (ProjectDependency) it
-        from("$dep.dependencyProject.buildDir/resources")
+        from("$dep.dependencyProject.buildDir/resources/test")
     }
 
-    into("$buildDir/resources")
+    into("$buildDir/resources/test")
 }
 
 processResources {
     dependsOn 'collectResources'
 }
 
+processTestResources {
+    dependsOn 'collectTestResources'
+}
 
 // These tasks are unnecessary for the root project...
 jar {
