--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -8,4 +8,6 @@ dependencies {
     compile group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
     compile group: 'org.ow2.asm', name: 'asm', version: '7.3.1'
     compile group: 'org.ow2.asm', name: 'asm-commons', version: '7.3.1'
+    compile group: 'org.jboss.forge.roaster', name: 'roaster-api', version: '2.21.2.Final'
+    compile group: 'org.jboss.forge.roaster', name: 'roaster-jdt', version: '2.21.2.Final'
 }
