--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,9 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+# The Midnight properties
 midnight.version=0.6.0
-midnight.version.name=The Midnight Rewrite
+midnight.version.name=The Midnight: Rewritten
 midnight.group=com.crypticmushroom
 midnight.modname=midnight
 midnight.apiname=midnight-api
