Added dynamic changelog generation - 'changelog.json' is the only file that needs to change when releasing a new patch - The task 'makeVersionInfo' generates a markdown changelog and the update json automatically in 'versioninfo' - Also tweaked constant injection configuration

--- a/MidnightMod/src/main/resources/META-INF/mods.toml
+++ b/MidnightMod/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ issueTrackerURL="https://github.com/Cryptic-Mushroom/The-Midnight/issues" #optio
 modId="midnight" #mandatory
 version="${file.jarVersion}" #mandatory
 displayName="The Midnight" #mandatory
-updateJSONURL="https://raw.githubusercontent.com/Cryptic-Mushroom/The-Midnight/1.15.2/changelog.json" #optional
+updateJSONURL="https://raw.githubusercontent.com/Cryptic-Mushroom/The-Midnight/1.16.1/versioninfo/update.json" #optional
 displayURL="https://www.curseforge.com/minecraft/mc-mods/the-midnight" #optional
 logoFile="logo.png" #optional
 #credits="Thanks for this example mod goes to Java" #optional
