--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -10,4 +10,5 @@ dependencies {
     compile group: 'org.ow2.asm', name: 'asm-commons', version: '7.3.1'
     compile group: 'org.jboss.forge.roaster', name: 'roaster-api', version: '2.21.2.Final'
     compile group: 'org.jboss.forge.roaster', name: 'roaster-jdt', version: '2.21.2.Final'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 }
