--- a/.github/workflows/1.16.1-build.yml
+++ b/.github/workflows/1.16.1-build.yml
@@ -10,6 +10,7 @@ on:
     paths-ignore:
       - '.github/**'
       - 'curseforge/**'
+      - 'versioninfo/**'
       - 'README.md'
       - 'LICENSE'
       - 'changelog.json'
