Changelog generator now generates separate markdowns for each version - A file '<version>_changelog.md' contains the changelog of a specific version - A file 'latest_changelog.md' contains the changelog of the latest version

--- a/build.gradle
+++ b/build.gradle
@@ -203,7 +203,8 @@ minecraft {
 
 midnight {
     updateJson file('versioninfo/update.json')
-    markdownChangelog file('versioninfo/changelog.md')
+    markdownChangelog file('versioninfo/latest_changelog.md')
+    markdownChangelog file("versioninfo/${changelogInfo.versionNumber}_changelog.md")
 }
 
 
