Add a workaround for a ForgeGradle issue with runData on MacOS - Data generator now uses GLFW, but runData does not automatically generate -XstartOnFirstThread when running on MacOS. Added a workaround for this but should be fixed. - See this issue: https://github.com/MinecraftForge/ForgeGradle/issues/690

--- a/build.gradle
+++ b/build.gradle
@@ -149,7 +149,6 @@ build {
     dependsOn ':MidnightMod:build'
 }
 
-
 // Configure run configurations only for root project
 minecraft {
     runs {
@@ -189,6 +188,10 @@ minecraft {
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
             property 'forge.logging.console.level', 'info'
             property 'midnight.iside', 'true'
+            if(project.ext.isOsx()) {
+                println("OSX___________________OSX____________OSX")
+                jvmArg("-XstartOnFirstThread")
+            }
 
             args '--mod', 'midnight', '--all', '--output', file('src/generated/resources/')
 
