--- a/.github/workflows/1.16.1-build.yml
+++ b/.github/workflows/1.16.1-build.yml
@@ -8,7 +8,6 @@ on:
     branches:
       - 1.16.1
     paths-ignore:
-      - '.github/**'
       - 'curseforge/**'
       - 'versioninfo/**'
       - 'README.md'
@@ -34,6 +33,26 @@ jobs:
         java-version: 1.8
         java-package: jdk
         architecture: x64
+
+    - name: Prepare to build The Midnight
+      env:
+          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+      run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+          ssh-add - <<< "${{ secrets.SSH_PRIVATE_KEY }}"
+          git clone git@github.com:${{ secrets.PRIVATE_REPO }}
+          echo "" >> gradle.properties
+          echo "mnKeyStore=${{ secrets.JKS_NAME }}" >> gradle.properties
+          echo "mnKeyStoreAlias=${{ secrets.JKS_ALIAS }}" >> gradle.properties
+          echo "mnKeyStorePass=${{ secrets.JKS_PASS }}" >> gradle.properties
+          echo "mnKeyStoreKeyPass=${{ secrets.JKS_PASS }}" >> gradle.properties
+          cp ${{ secrets.PRIVATE_REPO_NAME }}/${{ secrets.JKS_NAME }} MidnightAPI/${{ secrets.JKS_NAME }}
+          cp ${{ secrets.PRIVATE_REPO_NAME }}/${{ secrets.JKS_NAME }} MidnightCore/${{ secrets.JKS_NAME }}
+          cp ${{ secrets.PRIVATE_REPO_NAME }}/${{ secrets.JKS_NAME }} MidnightMod/${{ secrets.JKS_NAME }}
+          rm -rf ${{ secrets.PRIVATE_REPO_NAME }}
+          echo "Ready to build and sign The Midnight!"
 
     - name: Build The Midnight
       uses: eskatos/gradle-command-action@v1
@@ -106,11 +125,6 @@ jobs:
           gradle-version: 4.10.3
           arguments: runServer
 
-#      - name: Wait for 10 seconds
-#        uses: jakejarvis/wait-action@master
-#        with:
-#          time: '10s'
-
       - name: Read server test result
         id: log
         uses: andstor/file-reader-action@v1
@@ -120,7 +134,3 @@ jobs:
       - name: Determine if server test was unsuccessful
         if: contains(steps.log.outputs.contents, 'TEST FAILED')
         run: echo "GitHub Actions was unable to successfully load the test server into a temporary world. Check the log in the \"Run test server\" step to see what went wrong."; exit 1
-
-#      - name: Check if server test was successful
-#        if: contains(steps.log.outputs.contents, 'TEST SUCCESS')
-#        run: echo "TEST SUCCESS"
