Added official license
We have created our own license for The Midnight. Please note that this does not affect the 1.12.2, 1.14.4, and 1.15.2 versions of the mod; those versions are still under GNU GPL v3.

--- a/.github/workflows/1.16.1-build.yml
+++ b/.github/workflows/1.16.1-build.yml
@@ -8,10 +8,11 @@ on:
     branches:
       - 1.16.1
     paths-ignore:
+      - '.github/**'
       - 'curseforge/**'
       - 'versioninfo/**'
       - 'README.md'
-      - 'LICENSE'
+      - 'LICENSE.md'
       - 'changelog.json'
       - '.gitignore'
       - '.gitattributes'
