--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,9 @@ build
 # other
 eclipse
 run
-# Exclude the root sources directory as we don't use this...
-# IntelliJ may automatically generate them though...
 /src
+.cache
+
 
 # Files from Forge MDK
 forge*changelog.txt
