--- a/.github/workflows/rewrite-build.yml
+++ b/.github/workflows/rewrite-build.yml
@@ -1,12 +1,12 @@
 # This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java#publishing-using-gradle
 
-name: The Midnight (1.16.1)
+name: The Midnight: Rewritten
 
 on:
   push:
     branches:
-      - 1.16.1
+      - rewrite
     paths-ignore:
       - '.github/**'
       - 'curseforge/**'
@@ -20,7 +20,7 @@ on:
       - '*.*'
   pull_request:
     branches:
-      - 1.16.1
+      - rewrite
     paths-ignore:
       - '.github/**'
       - 'curseforge/**'
